--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,15 +6,14 @@
     <meta http-equiv="X-UA-compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/3.4.1/css/bootstrap.min.css}"/>
-
     <title>
     </title>
 </head>
-
 <body>
 <div class="container">
     <h1 class="text-center">Todo List</h1>
     <hr/>
+    <p th:text="|Happy ${today}|">Today</p>
     <table class="table table-bordered table-striped" id="todoItems">
         <thead>
         <tr>
@@ -23,18 +22,29 @@
             <th>Complete</th>
             <th>Created Date</th>
             <th>Modified Date</th>
+            <th>Actions</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="item : ${todoItems}">
+        <tr th:each="item : ${todoItems}" th:class="${item.complete} ? success : warning">
             <td th:text="${item.id}">item_id</td>
             <td th:text="${item.description}">item_description</td>
             <td th:text="${item.complete}">item_complete</td>
             <td th:text="${item.createdDate}">item_created_date</td>
             <td th:text="${item.modifiedDate}">item_modified_date</td>
+            <td>
+                <div class="btn btn-group-sm" role="group">
+                    <a class="btn btn-info" th:href="@{/edit/{id}(id=${item.id})}">Edit</a>
+                    <a class="btn btn-danger" th:href="@{/delete/{id}(id=${item.id})}">Delete</a>
+                </div>
+            </td>
         </tr>
         </tbody>
     </table>
+
+    <p><a class="btn btn-success" href="/create-todo">Add a Todo!</a></p>
+
+
 </div>
 <script th:src="@{/webjars/jquery/3.6.0/jquery.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/3.4.1/js/bootstrap.min.js}"></script>
