--- a/src/main/resources/templates/update-todo-item.html
+++ b/src/main/resources/templates/update-todo-item.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/3.4.1/css/bootstrap.min.css}"/>
+    <title>
+    </title>
 </head>
 <body>
-$END$
+    <div class="container">
+    <div class="col-md-6">
+        <form action="#" th:action="@{/todo/{id}(id=${todo.id})}" th:object="${todo}" method="POST">
+
+            <div class="form-group">
+                <label for="description">Description</label>
+                <input class="form-control" type="text" th:field="*{description}" id="description" placeholder="Add a description"/>
+            </div>
+
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" th:checked="${complete} == true" th:field="*{complete}" id="complete" />
+                    Complete
+                </label>
+            </div>
+            <button class="btn btn-default" type="submit">Update</button>
+            <input type="hidden" th:field="*{createdDate}" />
+            <input type="hidden" th:field="*{modifiedDate}" />
+        </form>
+    </div>
+    </div>
 </body>
 </html>
